--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Rock paper scissors</h1>
     <div class="buttons">
-        <button id="rock-btn">Rock</button>
-        <button id="paper-btn">Paper</button>
-        <button id="scissor-btn">Scissor</button>
+        <button id="rock-btn" value="rock">Rock</button>
+        <button id="paper-btn" value="paper">Paper</button>
+        <button id="scissor-btn" value="scissor">Scissor</button>
     </div>
 </body>
 </html>
