--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="buttons">
         <button id="rock-btn" value="rock">Rock</button>
         <button id="paper-btn" value="paper">Paper</button>
-        <button id="scissor-btn" value="scissor">Scissor</button>
+        <button id="scissor-btn" value="scissors">Scissor</button>
     </div>
 </body>
 </html>
