--- a/index.html
+++ b/index.html
@@ -9,10 +9,22 @@
 </head>
 <body>
     <h1>Rock paper scissors</h1>
-    <div class="buttons">
-        <button id="rock-btn" value="rock">Rock</button>
-        <button id="paper-btn" value="paper">Paper</button>
-        <button id="scissor-btn" value="scissors">Scissor</button>
+    <div class="container">
+        <div class="display">
+            <div class="player-side">
+                <h3>Player</h3>
+                <h1 id="player-score">0</h1>
+            </div>
+            <div class="computer-side">
+                <h3>Computer</h3>
+                <h1 id="computer-score">0</h1>
+            </div>
+        </div>
+        <div class="buttons">
+            <button id="rock-btn" value="rock">Rock</button>
+            <button id="paper-btn" value="paper">Paper</button>
+            <button id="scissor-btn" value="scissors">Scissor</button>
+        </div>
     </div>
 </body>
 </html>
