Added winner dispay dom element

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
                 <h3>Computer</h3>
                 <h1 id="computer-score">0</h1>
             </div>
+            <div class="winner">
+                <h1 id="winner-display"></h1>
+            </div>
         </div>
         <div class="buttons">
             <button id="rock-btn" value="rock">Rock</button>
